@@ -37,7 +37,10 @@
       <td>&nbsp;</td>
    </tr>
    <tr>
-      <td colspan="3" class="hlp_center"><input class="flat" type="submit" name="submit" value="<?php print $PALANG['pEdit_mailbox_button']; ?>" /></td>
+      <td colspan="3" class="hlp_center">
+        <input class="button" type="submit" name="submit" value="<?php print $PALANG['pEdit_mailbox_button']; ?>" />
+        <input class="button" type="submit" name="cancel" value="<?php print $PALANG['exit']; ?>" action="main.php" />
+     </td>
    </tr>
    <tr>
       <td colspan="3" class="standout"><?php print $tMessage; ?></td>
